--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Demo of the program with the application of webpack",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "init-project": "npm install && npm-run-all init:*",
+    "init:dirs": "mkdirp build src/sass src/images src/js src/templates",
+    "init:files": "touch README.md .gitignore src/templates/index.html src/sass/main.scss src/js/index.js"
   },
   "keywords": [
     "demo",
@@ -14,6 +16,10 @@
   "author": "Zenon Marek Raubuć",
   "license": "MIT",
   "devDependencies": {
+    "eslint": "^8.26.0",
+    "mkdirp": "^1.0.4",
+    "npm-run-all": "^4.1.5",
+    "sass": "^1.56.0",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
   }
