--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "init-project": "npm install && npm-run-all init:*",
     "init:dirs": "mkdirp build src/sass src/images src/js src/templates",
-    "init:files": "touch README.md .gitignore src/templates/index.html src/sass/main.scss src/js/index.js"
+    "init:files": "touch README.md .gitignore src/templates/index.html src/sass/main.scss src/js/index.js webpack.config.js",
+    "build": "webpack",
+    "start": "serve public"
   },
   "keywords": [
     "demo",
@@ -16,11 +18,19 @@
   "author": "Zenon Marek Raubuć",
   "license": "MIT",
   "devDependencies": {
+    "css-loader": "^6.7.1",
     "eslint": "^8.26.0",
     "mkdirp": "^1.0.4",
     "npm-run-all": "^4.1.5",
+    "prettier": "2.7.1",
     "sass": "^1.56.0",
+    "serve": "^14.0.1",
+    "style-loader": "^3.3.1",
     "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0"
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.11.1"
+  },
+  "dependencies": {
+    "lodash": "^4.17.21"
   }
 }
