--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "css-loader": "^6.7.1",
     "eslint": "^8.26.0",
+    "html-webpack-plugin": "^5.5.0",
     "mkdirp": "^1.0.4",
     "npm-run-all": "^4.1.5",
     "prettier": "2.7.1",
